temporary fix to hide images on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ p a,b{
 
 
 @media screen and (max-width: 720px){
-	.s{
+/*	.s{
 	max-width: 120px;
 	}
 	.m{
@@ -120,6 +120,10 @@ p a,b{
 	}
 	.l{
 		max-width: 200px;
+	}*/
+	
+	#images{
+		display: none;
 	}
 
 }
